Use HIP_COMPILER instead of HIP_PLATFORM to build rocRAND (#122)
Co-authored-by: saadrahim <44449863+saadrahim@users.noreply.github.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -9,7 +9,7 @@ endforeach()
 
 # Use CUDA_INCLUDE_DIRECTORIES to include required dirs
 # for nvcc if cmake version is less than 3.9.3
-if((HIP_PLATFORM STREQUAL "nvcc") AND (CMAKE_VERSION VERSION_LESS "3.9.3"))
+if((HIP_COMPILER STREQUAL "nvcc") AND (CMAKE_VERSION VERSION_LESS "3.9.3"))
     CUDA_INCLUDE_DIRECTORIES(
         "${PROJECT_BINARY_DIR}/library/include/"
         "${PROJECT_SOURCE_DIR}/library/include/"
@@ -22,7 +22,7 @@ endif()
 foreach(test_src ${rocRAND_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
     # nvcc/CUDA
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         set_source_files_properties(${test_src}
             PROPERTIES
                 CUDA_SOURCE_PROPERTY_FORMAT OBJ
@@ -41,6 +41,7 @@ foreach(test_src ${rocRAND_TEST_SRCS})
         PUBLIC
             ${PROJECT_SOURCE_DIR}/library/src
     )
+
     if(BUILD_TEST_STATIC)
         target_link_libraries(${test_name}
             rocrand_static
@@ -52,7 +53,7 @@ foreach(test_src ${rocRAND_TEST_SRCS})
             ${GTEST_BOTH_LIBRARIES}
         )
     endif()
-    if(HIP_PLATFORM STREQUAL "hcc")
+    if(HIP_COMPILER STREQUAL "hcc" OR HIP_COMPILER STREQUAL "clang")
         # Remove this check when we no longer build with older rocm stack(ie < 1.8.2)
         if(TARGET hip::device)
             target_link_libraries(${test_name} hip::device)
@@ -83,7 +84,7 @@ file(GLOB hipRAND_TEST_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/test_hiprand*.cpp)
 foreach(test_src ${hipRAND_TEST_SRCS})
     get_filename_component(test_name ${test_src} NAME_WE)
     # nvcc/CUDA
-    if(HIP_PLATFORM STREQUAL "nvcc")
+    if(HIP_COMPILER STREQUAL "nvcc")
         set_source_files_properties(${test_src}
             PROPERTIES
                 CUDA_SOURCE_PROPERTY_FORMAT OBJ
@@ -102,7 +103,8 @@ foreach(test_src ${hipRAND_TEST_SRCS})
         PUBLIC
             ${PROJECT_SOURCE_DIR}/library/src
     )
-    if(HIP_PLATFORM STREQUAL "nvcc")
+
+    if(HIP_COMPILER  STREQUAL "nvcc")
         if(BUILD_TEST_STATIC)
             target_link_libraries(${test_name}
                 hiprand_static
@@ -135,12 +137,7 @@ foreach(test_src ${hipRAND_TEST_SRCS})
             rocrand
             ${GTEST_BOTH_LIBRARIES}
         )
-        # Remove this check when we no longer build with older rocm stack(ie < 1.8.2)
-        if(TARGET hip::device)
-            target_link_libraries(${test_name} hip::device)
-        else()
-            target_link_libraries(${test_name} hip::device )
-        endif()
+        target_link_libraries(${test_name} hip::device )
         foreach(amdgpu_target ${AMDGPU_TARGETS})
             target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
         endforeach()
