--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,11 +25,15 @@ cmake_minimum_required(VERSION 3.5.1 FATAL_ERROR)
 # Install prefix
 set(CMAKE_INSTALL_PREFIX "/opt/rocm" CACHE PATH "Install path prefix, prepended onto install directories")
 
+#Adding CMAKE_PREFIX_PATH
+list( APPEND CMAKE_PREFIX_PATH /opt/rocm/llvm /opt/rocm )
+
 # CMake modules
 list(APPEND CMAKE_MODULE_PATH
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake
     ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules
     ${HIP_PATH}/cmake /opt/rocm/hip/cmake # FindHIP.cmake
+    /opt/rocm/llvm
 )
 
 #
