--- a/test/linkage/CMakeLists.txt
+++ b/test/linkage/CMakeLists.txt
@@ -43,7 +43,7 @@ function(add_rocrand_link_test TEST_SOURCES)
     if(HIP_COMPILER STREQUAL "hcc" OR HIP_COMPILER STREQUAL "clang")
         target_link_libraries(${TEST_TARGET} hip::device)
         foreach(amdgpu_target ${AMDGPU_TARGETS})
-            target_link_libraries(${TEST_TARGET} --amdgpu-target=${amdgpu_target})
+            target_link_libraries(${TEST_TARGET} --cuda-gpu-arch=${amdgpu_target})
         endforeach()
     endif()
     set_target_properties(
@@ -94,7 +94,7 @@ function(add_hiprand_link_test TEST_SOURCES)
         )
         target_link_libraries(${TEST_TARGET} hip::device)
         foreach(amdgpu_target ${AMDGPU_TARGETS})
-            target_link_libraries(${TEST_TARGET} --amdgpu-target=${amdgpu_target})
+            target_link_libraries(${TEST_TARGET} --cuda-gpu-arch=${amdgpu_target})
         endforeach()
     endif()
     set_target_properties(${TEST_TARGET}
