--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -54,7 +54,7 @@ foreach(test_src ${rocRAND_TEST_SRCS})
             target_link_libraries(${test_name} hip::device )
         endif()
         foreach(amdgpu_target ${AMDGPU_TARGETS})
-            target_link_libraries(${test_name} --cuda-gpu-arch=${amdgpu_target})
+            target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
         endforeach()
     endif()
     set_target_properties(
@@ -111,7 +111,7 @@ foreach(test_src ${hipRAND_TEST_SRCS})
         )
         target_link_libraries(${test_name} hip::device )
         foreach(amdgpu_target ${AMDGPU_TARGETS})
-            target_link_libraries(${test_name} --cuda-gpu-arch=${amdgpu_target})
+            target_link_libraries(${test_name} --amdgpu-target=${amdgpu_target})
         endforeach()
     endif()
     set_target_properties(${test_name}
