Append aaddress sanitizer flags to existing cmake flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,12 +57,16 @@ set(BUILD_SHARED_LIBS ON CACHE BOOL "Build shared")
 set(ADDRESS_SANITIZER OFF CACHE BOOL "Build with address sanitizer")
 
 if ( ${ADDRESS_SANITIZER} )
-    set ( HSAKMT_C_FLAGS "${HSAKMT_C_FLAGS}" -fsanitize=address )
-    set ( HSAKMT_LINK_FLAGS "${HSAKMT_LINK_FLAGS}" -fsanitize=address )
+    set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address" )
+    set ( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address" )
     if ( BUILD_SHARED_LIBS} )
-        set ( HSAKMT_LINK_FLAGS "${HSAKMT_LINK_FLAGS}" -shared-libasan )
+        set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -shared-libasan" )
+        set ( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -shared-libasan" )
+        set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fuse-ld=lld" )
     else ()
-        set ( HSAKMT_LINK_FLAGS "${HSAKMT_LINK_FLAGS}" -static-libasan )
+        set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-libasan" )
+        set ( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -static-libasan" )
+        set ( CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} -fuse-ld=lld" )
     endif ()
 endif ()
 
