--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,14 +58,14 @@ set(ADDRESS_SANITIZER OFF CACHE BOOL "Build with address sanitizer")
 
 if ( ${ADDRESS_SANITIZER} )
     set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address" )
-    set ( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address" )
+    set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address" )
     if ( BUILD_SHARED_LIBS} )
         set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -shared-libasan" )
-        set ( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -shared-libasan" )
+        set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -shared-libasan" )
         set ( CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fuse-ld=lld" )
     else ()
         set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static-libasan" )
-        set ( CMAKE_CXX_FLAGS "${CMAKE_C_FLAGS} -static-libasan" )
+        set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libasan" )
         set ( CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} -fuse-ld=lld" )
     endif ()
 endif ()
