--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,7 @@ endif()
 if(TARGET_ID_SUPPORT)
   set(AMDGPU_TARGETS gfx900:xnack-;gfx906:xnack-;gfx908:xnack-;gfx90a:xnack-;gfx90a:xnack+ CACHE STRING "List of specific machine types for library to target")
 else()
-  set(AMDGPU_TARGETS gfx900;gfx906;gfx908gfx90a CACHE STRING "List of specific machine types for library to target")
+  set(AMDGPU_TARGETS gfx900;gfx906;gfx908;gfx90a CACHE STRING "List of specific machine types for library to target")
 endif()
 
 # Verify that hcc compiler is used on ROCM platform
