--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,8 +64,9 @@ endif()
 
 #Set the AMDGPU_TARGETS with backward compatiblity
 if(COMMAND rocm_check_target_ids)
-    set(AMDGPU_TARGETS gfx803;gfx900:xnack-;gfx906:xnack-;gfx908:xnack-;gfx90a:xnack-;gfx90a:xnack+;gfx1030 CACHE STRING "List of specific machine types for library to target")
-    rocm_check_target_ids(AMDGPU_TARGETS TARGETS AMDGPU_TARGETS)
+   set(AMDGPU_TARGETS gfx803;gfx900:xnack-;gfx906:xnack-;gfx908:xnack-;gfx90a:xnack-;gfx90a:xnack+;gfx1030 
+       CACHE STRING "List of specific machine types for library to target")
+   rocm_check_target_ids(AMDGPU_TARGETS TARGETS AMDGPU_TARGETS)
 else()
    set(AMDGPU_TARGETS gfx803;gfx900;gfx906;gfx908 CACHE STRING "List of specific machine types for library to target")
 endif()
