Add sanitizer build option (#175)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -102,6 +102,13 @@ endif()
 option(BUILD_FORTRAN_WRAPPER "Build Fortran wrapper" OFF)
 option(BUILD_TEST "Build tests (requires googletest)" OFF)
 option(BUILD_BENCHMARK "Build benchmarks" OFF)
+option(BUILD_ADDRESS_SANITIZER "Build with address sanitizer enabled" OFF)
+
+if(BUILD_ADDRESS_SANITIZER AND BUILD_SHARED_LIBS)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -shared-libasan")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -shared-libasan")
+  add_link_options(-fuse-ld=lld)
+endif()
 
 # Set version variables
 rocm_setup_version( VERSION "2.10.9" )
